--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
     
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- JS-->
+    <!-- Sweet Alert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./src/js/funcionamientoCarrito.js"></script>
-    <script src="./src/js/main.js"></script>
+    <script src="./src/js/main.js"></script>    
 </body>
 
 </html>
