--- a/src/pages/carrito.html
+++ b/src/pages/carrito.html
@@ -104,9 +104,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- JS-->
+    <!-- Sweet Alert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../js/funcionamientoCarrito.js"></script>
     <script src="../js/itemsCarrito.js"></script>
-
 </body>
 
 </html>
