--- a/index.html
+++ b/index.html
@@ -6,82 +6,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Sofas Shop</title>
+    <title>The Beauty Company - Home</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- Barra de navegación -->
+    <nav id="navbar-mia" class="navbar navbar-expand-lg navbar-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="./index.html">Sofa Shop</a>
+            <a id="logo" class="navbar-brand fw-bold" href="./index.html">The Beauty Company</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Tienda</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Nosotros</a></li>
                 </ul>
+
                 <!-- Buscador de productos -->
                 <input type="text" id="producto-buscado">
-                <button id="boton-buscar" class="me-5" onclick="buscarProducto()">
-                    <i class="bi bi-search"></i>
+                <button class="me-5 bg-dark" id="boton-buscar" onclick="buscarProducto()">
+                    <i id="lupa" class="bi bi-search"></i>
                 </button>
-                <!-- ./ Buscador de productos -->
-                <form class="d-flex">
-                    <button class="btn btn-outline-dark" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        <a class="carrito-palabra" href="./src/pages/carrito.html">Carrito</a>
-                        <span id="boton-comprar" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
-                </form>
 
+                <!-- Carrito de productos -->
+                <form class="d-flex">
+                    <a class="btn btn-outline-dark fw-bold" href="./src/pages/carrito.html" type="button">
+                        <i class="bi-cart-fill me-1"></i>
+                        Carrito
+                        <span class="badge bg-dark text-white ms-1 rounded-pill" id="cantidad-carrito">0</span>
+                    </a>
+                </form>
             </div>
         </div>
     </nav>
-
     <!-- Header-->
     <header id="header" class="py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                <h1 id="h1-mio" class="display-4 fw-bolder">Shop Online</h1>
+                <h1 id="h1-mio" class="display-4 fw-bolder">The Beauty Company Store</h1>
+                <p id="p-mio" class="lead fw-bold text-white-75 mb-0">Los producto mas premiun del mercado solo para vos
+                </p>
             </div>
         </div>
     </header>
-
-    <!-- Section-->
-
+    <!-- Sección Cards-->
     <section class="py-5">
-        <div class="container px-4 px-lg-5 mt-5">
-            <div id="cards-productos"
+        <div class="container px-4 px-lg-5 mt-2">
+            <div id="grupo-de-cards"
                 class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                <!-- Agregado desde JS -->
+                <div class="col mb-5"></div>
             </div>
         </div>
     </section>
 
+    <div id="detalle-producto"></div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div id="descripcion-producto" class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Footer-->
     <footer id="footer" class="py-5">
         <div class="container">
-
+            <p class="m-0 text-center text-white"><a class="nav-link fw-bold" href="https://github.com/RoblesNX">
+                    Copyright &copy; Regina Marinozzi</a></p>
         </div>
     </footer>
-    
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- JS-->
-    <!-- Sweet Alert -->
+    <!-- Core theme JS-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="./src/js/funcionamientoCarrito.js"></script>
-    <script src="./src/js/main.js"></script>    
+    <script src="./src/js/buscadorItems.js"></script>
+    <script src="./src/js/logicaCarrito.js"></script>
+    <script src="./src/js/inventario.js"></script>
+    <script src="./src/js/generadorCards.js"></script>
+    <script src="./src/js/main.js"></script>
+
+
 </body>
 
 </html>
