--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
                 <h1 id="h1-mio" class="display-4 fw-bolder">The Beauty Company Store</h1>
-                <p id="p-mio" class="lead fw-bold text-white-75 mb-0">Los producto mas premiun del mercado solo para vos
+                <p id="p-mio" class="lead fw-bold text-white-75 mb-0">Los producto mas premium del mercado solo para vos
                 </p>
             </div>
         </div>
